--- a/aco.ipynb
+++ b/aco.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3982393762.py, line 25)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mO Kernel deu pane ao executar o código na célula atual ou em uma célula anterior. \n",
-      "\u001b[1;31mAnalise o código nas células para identificar uma possível causa da pane. \n",
-      "\u001b[1;31mClique <a href='https://aka.ms/vscodeJupyterKernelCrash'>aqui</a> para obter mais informações. \n",
-      "\u001b[1;31mConsulte Jupyter <a href='command:jupyter.viewOutput'>log</a> para obter mais detalhes."
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 25\u001b[0;36m\u001b[0m\n\u001b[0;31m    if\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -40,14 +37,20 @@
     "        for i in range(self.n.iterations):\n",
     "            paths = self.generate_paths()\n",
     "            all_paths.extend(paths)\n",
-    "            self.spread_pheronome(paths, self.beast_paths(paths))        \n",
+    "            self.spread_pheronome(paths, self.beast_paths(paths))       \n",
+    "            best_path_cost, best_path = min((self.path_cost(path), path) for path in paths)\n",
+    "            if best_path_cost < best_cost:\n",
+    "                best_cpst = best_path_cost\n",
+    "                shortest_path = best_path\n",
+    "            self.pheromone *= self.decay\n",
+    "        return shortest_path, best_cost, all_paths\n",
     "            "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "ACO",
    "language": "python",
    "name": "python3"
   },
@@ -61,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
