Adiciona a função de gerar os caminhos dentro de listas

--- a/aco.ipynb
+++ b/aco.ipynb
@@ -40,10 +40,20 @@
     "            self.spread_pheronome(paths, self.beast_paths(paths))       \n",
     "            best_path_cost, best_path = min((self.path_cost(path), path) for path in paths)\n",
     "            if best_path_cost < best_cost:\n",
-    "                best_cpst = best_path_cost\n",
+    "                best_cost = best_path_cost\n",
     "                shortest_path = best_path\n",
     "            self.pheromone *= self.decay\n",
     "        return shortest_path, best_cost, all_paths\n",
+    "    \n",
+    "    def generate_paths(self):\n",
+    "        paths = []\n",
+    "        for i in range(self.n.ants):\n",
+    "            path = [np.random.randint(len(self.distances))]\n",
+    "            while len(path) < len(self.distances):\n",
+    "                move = self.probabilistic_next_move(path)\n",
+    "                path.append(move)\n",
+    "            paths.append(path)\n",
+    "        return paths\n",
     "            "
    ]
   }
