feat: adiciona a função para calcular o próximo movimento oribabilistico das formigas

--- a/aco.ipynb
+++ b/aco.ipynb
@@ -54,6 +54,20 @@
     "                path.append(move)\n",
     "            paths.append(path)\n",
     "        return paths\n",
+    "    \n",
+    "    def probabilistic_next_move(self, current_path):\n",
+    "        last_node = current_path[-1]\n",
+    "        weights = np.copy(self.pheromone[last_node])\n",
+    "        weights[current_path] = 0  #isso evita dele revisitar cidades \n",
+    "        mask = self.distances[last_node] > 0\n",
+    "        weights[mask] /= self.distances[last_node][mask] ** self.beta\n",
+    "        if np.sum(weights) ==0:\n",
+    "            return np.ramdom.choice(self.all_inds)\n",
+    "        normalized_weights = weights / np.sum(weights)\n",
+    "        next_node = np.random.choice(self.all_inds, p=normalized_weights)\n",
+    "        return next_node\n",
+    "        \n",
+    "\n",
     "            "
    ]
   }
