festÇ adicionando a atualização do melhor caminho

--- a/aco.ipynb
+++ b/aco.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mO Kernel deu pane ao executar o código na célula atual ou em uma célula anterior. \n",
-      "\u001b[1;31mAnalise o código nas células para identificar uma possível causa da pane. \n",
-      "\u001b[1;31mClique <a href='https://aka.ms/vscodeJupyterKernelCrash'>aqui</a> para obter mais informações. \n",
-      "\u001b[1;31mConsulte Jupyter <a href='command:jupyter.viewOutput'>log</a> para obter mais detalhes."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -40,9 +28,22 @@
     "        for i in range(self.n.iterations):\n",
     "            paths = self.generate_paths()\n",
     "            all_paths.extend(paths)\n",
-    "            self.spread_pheronome(paths, self.beast_paths(paths))        \n",
+    "            self.spread_pheronome(paths, self.beast_paths(paths))\n",
+    "            best_path_cost, best_path = min((self.path_cost(path) ,path) for path in paths)   \n",
+    "                if best_path_cost < best_cost:\n",
+    "                    shortest_path = best_path\n",
+    "                    best_cost = best_path_cost\n",
+    "                self.pheromone *= self.decay\n",
+    "            return all_paths, shortest_path, best_cost, all_paths     \n",
     "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
