--- a/aco.ipynb
+++ b/aco.ipynb
@@ -2,22 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-<<<<<<< HEAD
-   "outputs": [],
-=======
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3982393762.py, line 25)",
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (1706891495.py, line 25)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 25\u001b[0;36m\u001b[0m\n\u001b[0;31m    if\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 25\u001b[1;36m\u001b[0m\n\u001b[1;33m    if best_path_cost < best_cost:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
->>>>>>> a4910dca935293116fcde974c5662f8ae1aff9a9
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -41,47 +37,13 @@
     "        for i in range(self.n.iterations):\n",
     "            paths = self.generate_paths()\n",
     "            all_paths.extend(paths)\n",
-<<<<<<< HEAD
     "            self.spread_pheronome(paths, self.beast_paths(paths))\n",
     "            best_path_cost, best_path = min((self.path_cost(path) ,path) for path in paths)   \n",
-    "                if best_path_cost < best_cost:\n",
-    "                    shortest_path = best_path\n",
-    "                    best_cost = best_path_cost\n",
+    "            if best_path_cost < best_cost:\n",
+    "                shortest_path = best_path\n",
+    "                best_cost = best_path_cost\n",
     "                self.pheromone *= self.decay\n",
     "            return all_paths, shortest_path, best_cost, all_paths     \n",
-=======
-    "            self.spread_pheronome(paths, self.beast_paths(paths))       \n",
-    "            best_path_cost, best_path = min((self.path_cost(path), path) for path in paths)\n",
-    "            if best_path_cost < best_cost:\n",
-    "                best_cost = best_path_cost\n",
-    "                shortest_path = best_path\n",
-    "            self.pheromone *= self.decay\n",
-    "        return shortest_path, best_cost, all_paths\n",
-    "    \n",
-    "    def generate_paths(self):\n",
-    "        paths = []\n",
-    "        for i in range(self.n.ants):\n",
-    "            path = [np.random.randint(len(self.distances))]\n",
-    "            while len(path) < len(self.distances):\n",
-    "                move = self.probabilistic_next_move(path)\n",
-    "                path.append(move)\n",
-    "            paths.append(path)\n",
-    "        return paths\n",
-    "    \n",
-    "    def probabilistic_next_move(self, current_path):\n",
-    "        last_node = current_path[-1]\n",
-    "        weights = np.copy(self.pheromone[last_node])\n",
-    "        weights[current_path] = 0  #isso evita dele revisitar cidades \n",
-    "        mask = self.distances[last_node] > 0\n",
-    "        weights[mask] /= self.distances[last_node][mask] ** self.beta\n",
-    "        if np.sum(weights) ==0:\n",
-    "            return np.ramdom.choice(self.all_inds)\n",
-    "        normalized_weights = weights / np.sum(weights)\n",
-    "        next_node = np.random.choice(self.all_inds, p=normalized_weights)\n",
-    "        return next_node\n",
-    "        \n",
-    "\n",
->>>>>>> a4910dca935293116fcde974c5662f8ae1aff9a9
     "            "
    ]
   },
@@ -95,7 +57,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ACO",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -109,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
