--- a/aco.ipynb
+++ b/aco.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (1706891495.py, line 25)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 25\u001b[1;36m\u001b[0m\n\u001b[1;33m    if best_path_cost < best_cost:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -49,10 +40,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_paths(self):\n",
+    "    paths = []\n",
+    "    for i in range(self.n_ants):\n",
+    "        path = [np.random.randint(len(self.distances))]\n",
+    "        while len(path) < len(self.distances):\n",
+    "            move = self.probabilistic_move(path)\n",
+    "            path.append(move)\n",
+    "        paths.append(path)\n",
+    "    return paths"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ":"
+   ]
   }
  ],
  "metadata": {
