Adicionado métodos para a classe AntColony: - generate_paths: Gera caminhos para as formigas. - probabilistic_next_move: Escolhe o próximo movimento de forma probabilística. - spread_pheronome: Espalha feromônio nos melhores caminhos.

--- a/aco.ipynb
+++ b/aco.ipynb
@@ -40,12 +40,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_paths(self):\n",
-    "    paths = []\n",
+    "    def generate_paths(self):\n",
+    "        # Inicializa a lista de caminhos\n",
+    "        paths = []\n",
+    "        # Para cada formiga\n",
+    "        for i in range(self.n_ants):\n",
+    "            # Inicia o caminho com um nó aleatório\n",
+    "            path = [np.random.randint(len(self.distances))]\n",
+    "            # Enquanto o caminho não estiver completo\n",
+    "            while len(path) < len(self.distances):\n",
+    "                # Escolhe o próximo movimento de forma probabilística\n",
+    "                move = self.probabilistic_move(path)\n",
+    "                # Adiciona o movimento ao caminho\n",
+    "                path.append(move)\n",
+    "            # Adiciona o caminho à lista de caminhos\n",
+    "            paths.append(path)\n",
+    "        # Retorna a lista de caminhos\n",
+    "        return paths\n",
     "    for i in range(self.n_ants):\n",
     "        path = [np.random.randint(len(self.distances))]\n",
     "        while len(path) < len(self.distances):\n",
@@ -66,7 +82,25 @@
     "    weights = np.copy(self.pheromone[last_node])\n",
     "    weights[current_path] = 0 #evitar que se revisite um caminho\n",
     "    mask = self.distances[last_node] > 0 \n",
-    "    weights[mask] /= self.distances[last_node][mask] ** self.beta\n",
+    "    def probabilistic_next_move(self, current_path):\n",
+    "        # Obtém o último nó do caminho atual\n",
+    "        last_node = current_path[-1]\n",
+    "        # Copia os pesos dos feromônios do último nó\n",
+    "        weights = np.copy(self.pheromone[last_node])\n",
+    "        # Define os pesos dos nós já visitados como zero para evitar revisitas\n",
+    "        weights[current_path] = 0\n",
+    "        # Cria uma máscara para os nós que têm uma distância maior que zero\n",
+    "        mask = self.distances[last_node] > 0 \n",
+    "        # Ajusta os pesos dos feromônios com base na distância e no parâmetro beta\n",
+    "        weights[mask] /= self.distances[last_node][mask] ** self.beta\n",
+    "        # Se a soma dos pesos for zero, escolhe um nó aleatório\n",
+    "        if np.sum(weights) == 0:\n",
+    "            return np.random.choice(self.all_inds)\n",
+    "        # Normaliza os pesos dos feromônios\n",
+    "        normalized_weights = weights / np.sum(weights)\n",
+    "        # Escolhe o próximo nó com base nos pesos normalizados\n",
+    "        next_node = np.random.choice(self.all_inds, p=normalized_weights)\n",
+    "        return next_node\n",
     "    if np.sum(weights) == 0:\n",
     "        return np.ramdom.choice(self.all_inds)\n",
     "    normalized_weights = weights / np.sum(weights)\n",
@@ -76,11 +110,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    ":"
+    "def spread_pheronome(self, paths, best_paths): \n",
+    "    # Para cada caminho e seu custo nos melhores caminhos\n",
+    "    for path_cost, path in best_paths:\n",
+    "        # Para cada movimento no caminho (exceto o último)\n",
+    "        for move in range(len(path) - 1):\n",
+    "            # Atualiza a quantidade de feromônio no caminho baseado no custo do caminho\n",
+    "            self.pheromone[path[move], path[move + 1]] += 1.0 / path_cost\n",
+    "            \n"
    ]
   }
  ],
