feat: adiciona funções para calcular o custo de caminhos e obter os melhores caminhos

--- a/aco.ipynb
+++ b/aco.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +122,44 @@
     "            # Atualiza a quantidade de feromônio no caminho baseado no custo do caminho\n",
     "            self.pheromone[path[move], path[move + 1]] += 1.0 / path_cost\n",
     "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def best_paths(self, paths):\n",
+    "    return sorted([(self.path_cost(path), path) for path in paths])[:self.n_best]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def path_cost(self, path):\n",
+    "    return sum([self.distances[path[i], path[i + 1]] for i in range(len(path) - 1)])\n",
+    "    # calcula o custo de um caminho somando as distâncias entre os nós consecutivos no caminho.\n",
+    "    # Para cada par de nós consecutivos no caminho, a distância entre eles é obtida da matriz de distâncias e somada ao custo total."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exemplo pratico\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances = np.array([[0, 2, 3], [2, 0, 4], [3, 4, 0]])"
    ]
   }
  ],
