--- a/aco.ipynb
+++ b/aco.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "class AntColony:\n",
+    "class AntColonyOptimizer:\n",
     "    def __init__(self, distance, n_ants, n_best, n_iterations, decay, alpha=1, beta=1, ):\n",
     "        self.distance = distance\n",
     "        self.pheromone = np.ones(self.distance.shape) / len(distance)\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,11 +155,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'AntColonyOptimizer' object has no attribute 'n'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m distances \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m], [\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m4\u001b[39m], [\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m0\u001b[39m]])\n\u001b[0;32m      2\u001b[0m aco \u001b[38;5;241m=\u001b[39m AntColonyOptimizer(distances, n_ants\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, n_best\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m, n_iterations\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m, decay\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.95\u001b[39m, alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, beta\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m shortest_path, cost, all_paths \u001b[38;5;241m=\u001b[39m \u001b[43maco\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShortest path:\u001b[39m\u001b[38;5;124m\"\u001b[39m, shortest_path)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCost:\u001b[39m\u001b[38;5;124m\"\u001b[39m, cost)\n",
+      "Cell \u001b[1;32mIn[15], line 20\u001b[0m, in \u001b[0;36mAntColonyOptimizer.run\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     18\u001b[0m best_cost \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minf\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     19\u001b[0m all_paths \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m---> 20\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mn\u001b[49m\u001b[38;5;241m.\u001b[39miterations):\n\u001b[0;32m     21\u001b[0m     paths \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgenerate_paths()\n\u001b[0;32m     22\u001b[0m     all_paths\u001b[38;5;241m.\u001b[39mextend(paths)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'AntColonyOptimizer' object has no attribute 'n'"
+     ]
+    }
+   ],
    "source": [
-    "distances = np.array([[0, 2, 3], [2, 0, 4], [3, 4, 0]])"
+    "distances = np.array([[0, 2, 3], [2, 0, 4], [3, 4, 0]])\n",
+    "aco = AntColonyOptimizer(distances, n_ants=10, n_best=3, n_iterations=100, decay=0.95, alpha=1, beta=2)\n",
+    "shortest_path, cost, all_paths = aco.run()\n",
+    "\n",
+    "print(\"Shortest path:\", shortest_path)\n",
+    "print(\"Cost:\", cost)\n",
+    "\n",
+    "# Plotting all paths\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "x = np.random.rand(distances.shape[0])\n",
+    "y = np.random.rand(distances.shape[0])\n",
+    "\n",
+    "for path in all_paths:\n",
+    "    for i in range(len(path) - 1):\n",
+    "        ax.plot([x[path[i]], x[path[i+1]]], [y[path[i]], y[path[i+1]]], 'grey', alpha=0.5, linewidth=1)\n",
+    "        mid_x, mid_y = (x[path[i]] + x[path[i+1]]) / 2, (y[path[i]] + y[path[i+1]]) / 2\n",
+    "        ax.text(mid_x, mid_y, str(distances[path[i], path[i+1]]), color='black', fontsize=8)\n",
+    "\n",
+    "for i, (xi, yi) in enumerate(zip(x, y)):\n",
+    "    ax.scatter(xi, yi, color='blue')\n",
+    "    ax.text(xi, yi, f'City {i}', color='black')\n",
+    "\n",
+    "ax.set_title(\"All Paths Explored\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Plotting the shortest path\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "for i in range(len(shortest_path) - 1):\n",
+    "    ax.plot([x[shortest_path[i]], x[shortest_path[i+1]]], [y[shortest_path[i]], y[shortest_path[i+1]]], 'b-', linewidth=2)\n",
+    "    mid_x, mid_y = (x[shortest_path[i]] + x[shortest_path[i+1]]) / 2, (y[shortest_path[i]] + y[shortest_path[i+1]]) / 2\n",
+    "    ax.text(mid_x, mid_y, str(distances[shortest_path[i], shortest_path[i+1]]), color='red', fontsize=8)\n",
+    "\n",
+    "for i, (xi, yi) in enumerate(zip(x, y)):\n",
+    "    ax.scatter(xi, yi, color='red')\n",
+    "    ax.text(xi, yi, f'City {i}', color='black')\n",
+    "\n",
+    "ax.set_title(f\"Shortest Path (Cost: {cost})\")\n",
+    "plt.show()"
    ]
   }
  ],
